--- a/.gitignore
+++ b/.gitignore
@@ -348,3 +348,6 @@ MigrationBackup/
 
 # Ionide (cross platform F# VS Code tools) working folder
 .ionide/
+/Src/BusinessNET7/Backend/ESO.db
+/Src/BusinessNET7/Backend/ESO.db-wal
+/Src/BusinessNET7/Backend/ESO.db-shm
